# hal_silabs

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md
examples/: License.txt
examples/proprietary_trx/: CMakeLists.txt  README.rst  prj.conf  prj_efr32xg24_dk2601b.conf
examples/proprietary_trx/boards/: efr32bg22_brd4184a.overlay  efr32xg24_dk2601b.overlay
examples/proprietary_trx/src/: app_cli.c  app_gpio.c  app_gpio.h  app_rail.c  app_rail.h  main.c  main.h
examples/proprietary_trx/src/autogen/: sl_rail_util_callbacks.c  sl_rail_util_init.c  sl_rail_util_init.h
gecko/: CMakeLists.txt  README
gecko/Device/SiliconLabs/EFM32GG11B/Include/: efm32gg11b_acmp.h  efm32gg11b_adc.h  efm32gg11b_af_pins.h  efm32gg11b_af_ports.h  efm32gg11b_can.h  efm32gg11b_can_mir.h  efm32gg11b_cmu.h  efm32gg11b_cryotimer.h  efm32gg11b_crypto.h  efm32gg11b_csen.h  efm32gg11b_devinfo.h  efm32gg11b_dma_descriptor.h  efm32gg11b_dmareq.h  efm32gg11b_ebi.h  efm32gg11b_emu.h  efm32gg11b_eth.h  efm32gg11b_etm.h  efm32gg11b_fpueh.h  efm32gg11b_gpcrc.h  efm32gg11b_gpio.h  efm32gg11b_gpio_p.h  efm32gg11b_i2c.h  efm32gg11b_idac.h  efm32gg11b_lcd.h  efm32gg11b_ldma.h  efm32gg11b_ldma_ch.h  efm32gg11b_lesense.h  efm32gg11b_lesense_buf.h  efm32gg11b_lesense_ch.h  efm32gg11b_lesense_st.h  efm32gg11b_letimer.h  efm32gg11b_leuart.h  efm32gg11b_msc.h  efm32gg11b_pcnt.h  efm32gg11b_prs.h  efm32gg11b_prs_ch.h  efm32gg11b_prs_signals.h  efm32gg11b_qspi.h  efm32gg11b_rmu.h  efm32gg11b_romtable.h  (+22 more)
gecko/Device/SiliconLabs/EFM32GG11B/Source/: system_efm32gg11b.c
gecko/board/config/brd4184b/: peripheral_preference.yml  sl_device_init_lfxo_config.h
gecko/board/inc/: brd4166a_support.h  sl_board_control.h
gecko/board/src/: brd4166a_support.c  sl_board_control_gpio.c  sl_board_control_stub.c  sl_board_init.c
gecko/common/inc/: sl_cmsis_os2_common.h  sl_slist.h  sl_status.h  sl_string.h  sli_cmsis_os2_ext_task_register.h
gecko/common/src/: sl_slist.c  sl_status.c  sl_stdio.c  sl_string.c  sli_cmsis_os2_ext_task_register.c
gecko/emlib/inc/: em_gpio.h  em_ramfunc.h  em_version.h
gecko/emlib/src/: em_emu.c  em_eusart.c  em_timer.c
gecko/radio/: CMakeLists.txt
gecko/radio/rail_lib/: CMakeLists.txt
gecko/radio/rail_lib/autogen/: ver.h
gecko/se_manager/: CMakeLists.txt
gecko/se_manager/inc/: sl_se_manager.h  sl_se_manager_check_config.h  sl_se_manager_config.h
gecko/se_manager/src/: sl_se_manager_cipher.c  sli_se_manager_osal.h  sli_se_manager_osal_zephyr.h
gecko/service/device_init/src/: sl_device_init_dcdc_s1.c  sl_device_init_dcdc_s2.c  sl_device_init_dpll_s2.c  sl_device_init_emu_s0.c  sl_device_init_emu_s1.c  sl_device_init_emu_s2.c  sl_device_init_hfrco.c  sl_device_init_hfxo_s0.c  sl_device_init_hfxo_s1.c  sl_device_init_hfxo_s2.c  sl_device_init_lfrco.c  sl_device_init_lfxo_s0.c  sl_device_init_lfxo_s1.c  sl_device_init_lfxo_s2.c  sl_device_init_nvic.c
gecko/service/hfxo_manager/inc/: sl_hfxo_manager.h
gecko/service/hfxo_manager/src/: sl_hfxo_manager.c  sl_hfxo_manager_hal_s2.c
gecko/service/power_manager/inc/: sl_power_manager.h  sli_power_manager.h
gecko/service/power_manager/src/: sl_power_manager.c  sl_power_manager_debug.c  sl_power_manager_hal_s0_s1.c  sl_power_manager_hal_s2.c  sli_power_manager_private.h
gecko/service/sleeptimer/config/: sl_sleeptimer_config.h
gecko/service/sleeptimer/inc/: peripheral_sysrtc.h  peripheral_sysrtc_compat.h  sl_sleeptimer.h
gecko/service/sleeptimer/src/: peripheral_sysrtc.c  sl_sleeptimer.c  sl_sleeptimer_hal_burtc.c  sl_sleeptimer_hal_prortc.c  sl_sleeptimer_hal_rtc.c  sl_sleeptimer_hal_rtcc.c  sl_sleeptimer_hal_sysrtc.c
scripts/: .gitignore  (+12 more)
simplicity_sdk/: CMakeLists.txt  License.txt
simplicity_sdk/platform/common/inc/: sl_code_classification.h  sl_common.h  sl_compiler.h  sl_core.h  sl_event_system.h  sl_platform_version.h  sl_status.h  sl_string.h  sli_code_classification.h  sli_icache_disable.h
simplicity_sdk/platform/common/src/: sl_core_cortexm.c  sl_slist.c  sl_string.c
simplicity_sdk/platform/emlib/inc/: em_acmp.h  em_burtc.h  em_chip.h  em_cmu.h  em_cmu_fpga.h  em_core.h  em_dbg.h  em_emu.h  em_gpio.h  em_i2c.h  em_iadc.h  em_lcd.h  em_ldma.h  em_lesense.h  em_letimer.h  em_msc.h  em_opamp.h  em_pcnt.h  em_pdm.h  em_prs.h  em_ramfunc.h  em_rmu.h  em_rtcc.h  em_se.h  em_smu.h  em_syscfg.h  em_system.h  em_system_generic.h  em_timer.h  em_usart.h  em_wdog.h  sli_em_cmu.h
simplicity_sdk/platform/emlib/src/: em_acmp.c  em_cmu.c  em_cmu_fpga.c  em_cmu_fpga_npu.c  em_crypto.c  em_dbg.c  em_emu.c  em_eusart.c  em_gpcrc.c  em_gpio.c  em_i2c.c  em_iadc.c  em_lcd.c  em_ldma.c  em_msc.c  em_pcnt.c  em_pdm.c  em_prs.c  em_rmu.c  em_se.c  em_system.c  em_usart.c  em_vdac.c
simplicity_sdk/platform/peripheral/inc/: peripheral_dcdc_coulomb_counter.h  peripheral_dcdc_coulomb_counter_compat.h  peripheral_etampdet.h  peripheral_etampdet_compat.h  peripheral_keyscan.h  peripheral_keyscan_compat.h  peripheral_sysrtc.h  peripheral_sysrtc_compat.h  sl_hal_acmp.h  sl_hal_adc.h  sl_hal_burtc.h  sl_hal_bus.h  sl_hal_dcdc_coulomb_counter.h  sl_hal_emu.h  sl_hal_etampdet.h  sl_hal_etampdet_compat.h  sl_hal_eusart.h  sl_hal_gpcrc.h  sl_hal_gpio.h  sl_hal_i2c.h  sl_hal_iadc.h  sl_hal_keyscan.h  sl_hal_lcd.h  sl_hal_ldma.h  sl_hal_leddrv.h  sl_hal_lesense.h  sl_hal_letimer.h  sl_hal_msc.h  sl_hal_pcnt.h  sl_hal_pdm.h  sl_hal_pixelrz.h  sl_hal_prs.h  sl_hal_prs_enums.h  sl_hal_rtcc.h  sl_hal_smu.h  sl_hal_syscfg.h  sl_hal_sysrtc.h  sl_hal_sysrtc_subsystem.h  sl_hal_system.h  sl_hal_system_generic.h  (+4 more)
simplicity_sdk/platform/peripheral/src/: sl_hal_acmp.c  sl_hal_adc.c  sl_hal_burtc.c  sl_hal_dcdc_coulomb_counter.c  sl_hal_emu.c  sl_hal_etampdet.c  sl_hal_eusart.c  sl_hal_gpcrc.c  sl_hal_gpio.c  sl_hal_i2c.c  sl_hal_iadc.c  sl_hal_keyscan.c  sl_hal_lcd.c  sl_hal_ldma.c  sl_hal_leddrv.c  sl_hal_lesense.c  sl_hal_letimer.c  sl_hal_msc.c  sl_hal_pcnt.c  sl_hal_pdm.c  sl_hal_pixelrz.c  sl_hal_prs.c  sl_hal_rtcc.c  sl_hal_syscfg.c  sl_hal_sysrtc.c  sl_hal_sysrtc_subsystem.c  sl_hal_system.c  sl_hal_timer.c  sl_hal_usart.c  sl_hal_vdac.c  sl_hal_wdog.c
(+2438 files in other folders)
